appId: com.adesso.SampleAppSwiftUI.development
---
- launchApp
- tapOn:
    id: "searchBarViewInputField"
- inputText: "BTC"
- assertVisible: BTC
