appId: com.adesso.SampleAppSwiftUI.development
---
- launchApp
- tapOn:
    id: "searchBarViewInputField"
- inputText: "Test coin"
- assertVisible: "No Coins found."
